Interface de Gestion des Propriétés + Gestion basique des médias

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -71,9 +71,25 @@
   "btn_generate": "Générer",
   "btn_export": "Exporter",
   "btn_import": "Importer",
+  "btn_duplicate": "Dupliquer",
+  "btn_new_property": "Nouvelle Propriété",
+  "btn_edit_property": "Modifier Propriété",
+  "btn_delete_property": "Supprimer Propriété",
+  "btn_duplicate_property": "Dupliquer Propriété",
+  "btn_generate_website": "Générer Site Web",
+  "btn_refresh": "Actualiser",
   "msg_success": "Opération terminée avec succès",
   "msg_error": "Une erreur s'est produite",
   "msg_confirm_delete": "Êtes-vous sûr de vouloir supprimer cet élément?",
+  "msg_confirm_delete_property": "Êtes-vous sûr de vouloir supprimer la propriété '{title}' ?\n\nCette action est irréversible et supprimera tous les fichiers média associés.",
+  "msg_property_deleted": "Propriété supprimée avec succès",
+  "msg_property_duplicated": "Propriété dupliquée avec succès (Nouvel ID: {new_id})",
+  "msg_delete_error": "Échec de la suppression de la propriété",
+  "msg_duplicate_error": "Échec de la duplication de la propriété",
+  "msg_no_selection": "Veuillez sélectionner une propriété",
+  "msg_no_selection_edit": "Veuillez sélectionner une propriété à modifier",
+  "msg_no_selection_delete": "Veuillez sélectionner une propriété à supprimer",
+  "msg_no_selection_duplicate": "Veuillez sélectionner une propriété à dupliquer",
   "msg_no_properties": "Aucune propriété trouvée",
   "msg_loading": "Chargement...",
   "msg_saving": "Enregistrement...",
