--- a/locales/en.json
+++ b/locales/en.json
@@ -71,6 +71,13 @@
   "btn_generate": "Generate",
   "btn_export": "Export",
   "btn_import": "Import",
+  "btn_duplicate": "Duplicate",
+  "btn_new_property": "New Property",
+  "btn_edit_property": "Edit Property",
+  "btn_delete_property": "Delete Property",
+  "btn_duplicate_property": "Duplicate Property",
+  "btn_generate_website": "Generate Website",
+  "btn_refresh": "Refresh",
   "msg_success": "Operation completed successfully",
   "msg_error": "An error occurred",
   "msg_confirm_delete": "Are you sure you want to delete this item?",
